--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jayson": "^3.0.2",
+    "log4js": "^4.4.0",
     "md5": "^2.2.1",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "request": "^2.88.0",
+    "uuid": "^3.3.2"
   }
 }
